# montecarlo_tdtr

./: Makefile  README.md  environment.yml  instructions.txt  pyproject.toml
montecarlo_tdtr/: aluminium_nitride.sh  montecarlo_aln.py  run_AlN_multiple.sh
montecarlo_tdtr/analysis/: bidirectional.py  bidirectional_gpu.py
montecarlo_tdtr/data/: beam.py  dataframe.py
notebooks/: AlN_Template.ipynb  AlN_template_multiple.ipynb  AlN_template_single.ipynb  LaserNoise.ipynb  LogFilePlotter_template.ipynb  run_notebooks.sh  run_notebooks_multiple.sh
