[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "montecarlo_tdtr"
version = "0.0.1"
description = "Monte Carlo analysis script for time-domain thermoreflectance (TDTR) setup in 4th floor lab Micronova"
authors = [
  { name = "Josef Stevanus" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["montecarlo_tdtr"]
force_sort_within_sections = true


